# bcdec

./: .gitignore  bcdec.c  bcdec.h  meson.build  meson.options  test.c
.github/workflows/: meson.yml
